# HyTech-Software-Onboarding

./: CMakeLists.txt  default.nix  flake.nix  result
Lab1-CMake/Part1/: CMakeLists.txt
Lab1-CMake/Part2/: CMakeLists.txt
Lab1-CMake/Part2/include/: hello_world.hpp
Lab1-CMake/Part2/src/: hello_world.cpp  main.cpp
Lab2-Nix/Part1/: CMakeLists.txt  default.nix  flake.nix
Lab2-Nix/Part1/src/: hellolib.cpp  main.cpp
Lab2-Nix/Part2/: default.nix  flake.nix  hellolib.nix
Lab2-Nix/Part2/hellolib/: CMakeLists.txt
Lab2-Nix/Part2/hellolib/include/: hellolib.hpp
Lab2-Nix/Part3/: CMakeLists.txt  default.nix  flake.nix
Lab3-EthernetProtobuf/: CMakeLists.txt  default.nix  flake.nix
Lab3-EthernetProtobuf/include/: simpleMessage.pb.cc  simpleMessage.pb.h
Lab3-EthernetProtobuf/src/: client.cpp  server.cpp  simpleMessage.proto
Lab3-EthernetProtobuf/tutorial/: CMakeLists.txt  addressbook.pb.cc  addressbook.pb.h  addressbook.proto  flake.nix  reader.cpp  writer.cpp
cmake/: hellolibConfig.cmake.in
include/: hellolib.hpp
src/: hellolib.cpp
